@@ -1,3 +1,9 @@
+2015-02-27  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* configure.ac: Drop tests for strerror(), vprintf(), and
+	sizeof(int); add AC_TYPE_INT16_T etc.
+	* types.h: Drop unused HAVE_VPRINTF; use int16_t etc.
+
 2014-06-19  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* dvitodvi.c: Avboid undefined behaviour when char is signed.
